--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,3 +1,4 @@
 <button (click)="increment()">+</button>
 <button (click)="decrement()">-</button>
+<button (click)="reset()">reset</button>
 <div>Count: {{count}}</div>
